--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,8 +53,10 @@
     <UnityVersion>2020.3.16f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets/Script/PlayerController.cs" />
     <Compile Include="Assets/Script/FollowPlayer.cs" />
+    <Compile Include="Assets/Script/PlayerController.cs" />
+    <Compile Include="Assets/Challenge 1/Scripts/PlayerControllerX.cs" />
+    <Compile Include="Assets/Challenge 1/Scripts/FollowPlayerX.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/Course Library/_Source_Files/_LICENSE.txt" />
